Added animated floating plan in home banner (#17)

--- a/src/scripts/pages/home/banner/home-banner-template.html
+++ b/src/scripts/pages/home/banner/home-banner-template.html
@@ -1,5 +1,8 @@
 <section class="home-banner">
-  <div class="banner-display"></div>
+  <div class="banner-display">
+    <div id="hoveringPlan" class="hovering-plan"></div>
+    <div id="hoveringPlanShadow" class="hovering-plan-shadow"></div>
+  </div>
   <div class="centered-content download-cta-container">
     <mp-download-cta
       devices-color="'dark'"
