--- a/src/scripts/pages/home/presentation-reservation-form/presentation-reservation-form-template.html
+++ b/src/scripts/pages/home/presentation-reservation-form/presentation-reservation-form-template.html
@@ -1,10 +1,11 @@
 <div class="presentation-reservation-form">
+
   <form
     name="reservationForm"
     ng-submit="vm.validateForm(reservationForm) && vm.submitForm()"
+    ng-show="!vm.isServiceSuccessVisible"
     novalidate
   >
-
     <div
       class="name-part first-name-wrapper"
       ng-class="{ 'error' : !vm.isFieldValid(reservationForm.firstName) }"
@@ -86,10 +87,49 @@
       class="form-message response error"
       ng-show="vm.isServiceErrorVisible"
     >Oups&nbsp;! Un problème technique nous a empêché de soumettre votre requête. Veuillez tenter à nouveau.</div>
-
-    <div
-      class="form-message response success"
-      ng-show="vm.isServiceSuccessVisible"
-    >Merci&nbsp;! Nous avons reçu votre requête, nous vous contacterons sous peu.</div>
   </form>
+
+  <div
+    class="success-response"
+    ng-show="vm.isServiceSuccessVisible"
+    ng-cloak
+  >
+    <div class="follow-up-header">
+      <div class="follow-up-icon icon-letter-sent">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 78 29" role="img">
+          <title>Courriel envoyé</title>
+          <desc>Icône d'une lettre envoyée</desc>
+          <path d="M78,5.925V0H35.875V29H78V5.925ZM73.843,4l-16.9,11.638L40.033,4Zm.338,21H39.695V8.555l17.243,11.87L74.18,8.555Z" />
+          <rect y="4.49" width="31.512" height="4" />
+          <rect y="20.49" width="31.512" height="4" />
+          <rect x="10.504" y="12.49" width="21.008" height="4" />
+        </svg>
+      </div>
+      <h2>Votre courriel a bien été reçu.</h2>
+      <p class="follow-up-subheading">Nous vous contacterons dans les plus brefs délais.</p>
+    </div>
+
+    <div class="follow-up-column">
+      <div class="follow-up-icon icon-phone">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" role="img">
+          <title>Contactez-nous par téléphone</title>
+          <desc>Icône d'un téléphone</desc>
+          <path d="M8,0A4.588,4.588,0,0,0,4.9,1.5l-3.5,4A6.711,6.711,0,0,0,0,10c0,5.3,3.6,12.8,10.4,19.5S24.7,40,30,40a6.711,6.711,0,0,0,4.5-1.4l4-3.5A4.2,4.2,0,0,0,40,32a4.1,4.1,0,0,0-1.4-3.1l-5.5-5.5A4.1,4.1,0,0,0,30,22a4.954,4.954,0,0,0-3.1,1.4l-2,2q-.45.45-.6.3l-10-10c-.1-.2.1-.4.2-.5l2.1-2.1a4.051,4.051,0,0,0,1.4-3A4.954,4.954,0,0,0,16.6,7L11.1,1.5A3.88,3.88,0,0,0,8,0Zm.9,3.5L14.4,9a1.7,1.7,0,0,1,.6,1,1.456,1.456,0,0,1-.6.9L12.3,13a3.38,3.38,0,0,0-.4,4.5L22.4,28a3.47,3.47,0,0,0,4.4-.3L29,25.5a1.8,1.8,0,0,1,.9-.6,1.934,1.934,0,0,1,.9.5l5.5,5.5c.8.9.7,1.4.1,1.8l-4,3.5a3.744,3.744,0,0,1-2.5.6c-3.8,0-11.1-3.2-17.4-9.6S3,13.8,3,10a4.233,4.233,0,0,1,.6-2.5l3.5-4C7.7,2.7,8.3,2.9,8.9,3.5Z" />
+        </svg>
+      </div>
+      <a class="follow-up-link" href="tel:18446342763">1-844-634-2763</a>
+    </div>
+
+    <div class="follow-up-column">
+      <div class="follow-up-icon icon-letter">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 45 29" role="img">
+          <title>Contactez-nous par courriel</title>
+          <desc>Icône d'une lettre</desc>
+          <path d="M45,5.925V0H0V29H45V5.925ZM40.559,4,22.5,15.638,4.441,4Zm.361,21H4.08V8.555L22.5,20.425,40.92,8.555Z" />
+        </svg>
+      </div>
+      <a class="follow-up-link" href="mailto:info@megapode.ca?Subject=Suivi%20r&eacute;servation" target="_top">info@megapode.ca</a>
+    </div>
+  </div>
+
 </div>
